--- a/app/layout/navbar.html
+++ b/app/layout/navbar.html
@@ -1,4 +1,4 @@
-<div  ng-controller="AuthController as vm" class="top-bar" id="main-menu">
+<div class="top-bar" id="main-menu">
   <div class="top-bar-left">
     <ul class="dropdown menu" data-dropdown-menu>
       <li><a class="menu-text" ui-sref="home">Mutant School</a></li>
